--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "blogify-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Blogify API backend project",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
